@@ -9,12 +9,10 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
+
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.*;
@@ -79,7 +77,7 @@ class UserServiceTest {
 		User existingUser = new User();
 		existingUser.setName("ExistingUser");
 
-		when(userRepo.findAll()).thenReturn(Arrays.asList(existingUser));
+		when(userRepo.findAll()).thenReturn(List.of(existingUser));
 
 		// Test
 		String result = userService.createUser(userDTO);
